[package]
name = "medicine-counter"
version = "0.1.0"
authors = ["Signe Rhea Grau Kristensen <signegrau@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["unstable-locales"] }
